# work

AS2/: Makefile
AS2/include/: SPI.h  encoder.h  periodTimer.h  pwm_hal.h  sampler.h
AS2/src/: encoder.c  main.c  reporter.c  sampler.c  udp_listener.c
as1/cmake_starter/: CMakeLists.txt  toolchain-aarch64.cmake
as1/cmake_starter/app/: CMakeLists.txt
as1/cmake_starter/app/src/: reaction_timer.c
as1/cmake_starter/hal/include/hal/: joystick.h  led.h  mcp3208.h  spi.h
as1/cmake_starter/hal/src/: joystick.c  led.c  mcp3208.c  spi.c
as2/: CMakeLists.txt  toolchain-aarch64.cmake
as2/app/: CMakeLists.txt
as2/app/src/: as2.c  light_sampler.c
as2/build-aarch64/: CMakeCache.txt  Makefile  cmake_install.cmake
as2/build-aarch64/app/: Makefile  cmake_install.cmake
as2/build-aarch64/hal/: Makefile  cmake_install.cmake
as2/hal/: CMakeLists.txt
as2/hal/include/hal/: dips.h  reporter.h  rotary_encoder.h  udp_listener.h
as2/hal/src/: SPI.c  adc_hal.c  dips.c  encoder.c  main.c  pwm_hal.c  reporter.c  rotary_encoder.c  sampler.c  udp_listener.c
as2/noworky/: as2-gdb.txt  noworky.c
assignment2/: Makefile
assignment2/include/: adc_hal.h  pwm_hal.h  reporter.h  udp_listener.h
assignment2/src/: main.c  pwm_hal.c  reporter.c
